--- a/PuertoRico.html
+++ b/PuertoRico.html
@@ -13,7 +13,7 @@
 
     <main>
       <section>
-        <img src="Puerto-Rico-flag.jpg" alt="Puerto Ricos's Flag" />
+        <img src="Puerto-Rico-flag" alt="Puerto Ricos's Flag" />
         <p> Puerto Rico Flag (Source: <a href="https://www.cia.gov/library/publications/the-world-factbook/geos/rq.html">CIA World Factbook</a>)</p>
 
     <nav>
