--- a/PuertoRico.html
+++ b/PuertoRico.html
@@ -13,7 +13,7 @@
 
     <main>
       <section>
-      <img src="Puerto-Rico-flag.jpg" alt="Puerto Rico's Flag" />
+      <img src="Puerto-Rico-flag.png" alt="Puerto Rico's Flag" />
         <p> Puerto Rico Flag (Source: <a href="https://www.cia.gov/library/publications/the-world-factbook/geos/rq.html">CIA World Factbook</a>)</p>
 
     <nav>
@@ -29,11 +29,10 @@
       <section id="Introduction">
         <h2>Introduction</h2>
 
-        <p>Populated for centuries by aboriginal peoples, the island was claimed by the Spanish Crown in 1493
-          following Christopher COLUMBUS' second voyage to the Americas. In 1898, after 400 years of colonial
-          rule that saw the indigenous population nearly exterminated and African slave labor introduced,
-          Puerto Rico was ceded to the US
-          as a result of the Spanish-American War. Puerto Ricans were granted US citizenship in 1917.</P>
+        <p>Puerto Rico has been populated for centuries by aboriginal peoples, the island was claimed by the Spanish Crown
+          in 1493. In 1898, after 400 years of colonial rule that saw the indigenous population nearly cease to exist and
+          African slave labor was introduced to the island, Puerto Rico was ceded to the US due to the Spanish-American War.
+          Puerto Ricans were then granted US citizenship in 1917.</P>
 
         <p>Popularly elected governors have served since 1948. In 1952, a constitution was enacted providing
           for internal self-government. In plebiscites held in 1967, 1993, and 1998, voters chose not to alter
@@ -54,7 +53,7 @@
 
           <p>Caribbean, island between the Caribbean Sea and the North Atlantic Ocean, east of the Dominican Republic.
 
-          <img src="Puerto-Rico-map.jpg" alt="Map of Puerto Rico" />
+          <img src="Puerto-Rico-map.png" alt="Map of Puerto Rico" />
           <p>Puerto Rico Map (Source: <a href="https://www.cia.gov/library/publications/the-world-factbook/geos/rq.html">CIA World Factbook</a>)</p>
 
           <h3>Population Distribution</h3>
