--- a/PuertoRico.html
+++ b/PuertoRico.html
@@ -58,7 +58,7 @@
 
           <h3>Population Distribution</h3>
 
-          <p>Population clusters tend to be found along the coast, the largest of these is found in and around San Juan;
+          <p>Population can be seen increased in areas along the coast, the largest populated area is around San Juan;
             an exception to this is a sizeable population located in the interior of the island immediately south of the
             capital around Caguas; most of the interior, particularly in the western half of the island, is dominated by
             the Cordillera Central mountains, where population density is low.</p>
@@ -79,7 +79,7 @@
           <ul>
             <li>Name: San Juan</li>
             <li>Geographical Coordinates: 18 28 N, 66 07 W</li>
-            <li>Time Difference: UTC-4 (1 hour ahead of Washingto, DC, during Standard Time)</li>
+            <li>Time Difference: UTC-4 (1 hour ahead of Washington, DC, during Standard Time)</li>
             <li>Etymology: the name dates to 1521 and the founding of the city under the name
               "Ciudad de San Juan Bautista de Puerto Rico" (City of Saint John the Baptist of Puerto Rico).
           </ul>
@@ -103,7 +103,8 @@
         <h2>Communications</h2>
         <h3>Broadcat media</h3>
 
-        <p>More than 30 TV stations operating; cable TV subscription services are available; roughly 125 radio stations.</p>
+        <p>Puerto Rico has more than 30 TV stations currently operating, cable TV subscription services are available,
+          and roughly 125 active radio stations.</p>
 
         <h3>Internet country code</h3>
 
