--- a/PuertoRico.html
+++ b/PuertoRico.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Puerto Rico</title>
+    <link href=".git/style.css" rel="stylesheet"/>
   </head>
 
   <body id="top">
@@ -11,7 +12,7 @@
       <h1>Puerto Rico</h1>
       <figure>
         <img src="puerto-rico-flag.jpg" alt="Puerto Rico's Flag" />
-        <figcaption> Puerto Rico Flag (Source: <a href="https://www.cia.gov/library/publications/the-world-factbook/geos/rq.html">CIA World Factbook</a>)</p>
+        <figcaption> Puerto Rico Flag (Source: <a href="https://www.cia.gov/library/publications/the-world-factbook/geos/rq.html">CIA World Factbook</a>)</figcaption>
       </figure>
       <nav>
         <ul>
@@ -80,7 +81,7 @@
           <article>
           <h3>Political Parties and Leaders</h3>
 
-          <table><style> td, th {border: 1px solid black;} </style>
+          <table>
             <tr><th>Party</th><th>Leader</th></tr>
             <tr><td>National Democratic Party</td><td>Charlie RODRÍGUEZ</td></tr>
             <tr><td>National Republican Party of Puerto Rico</td><td>Jenniffer GONZÁLEZ</td></tr>
