--- a/puertorico.html
+++ b/puertorico.html
@@ -11,7 +11,7 @@
     <header>
       <h1>Puerto Rico</h1>
       <figure>
-        <img> src="images/puerto-rico-flag.jpg" alt="puerto rico's flag" </img>
+        <img src="images/puerto-rico-flag.jpg" alt="puerto rico's flag" />
       <figcaption> Puerto Rico Flag (Source: <a href="https://www.cia.gov/library/publications/the-world-factbook/geos/rq.html">CIA World Factbook</a>)</figcaption>
       </figure>
       <nav>
